# zoko-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-package.yml  python-package.yml  test-package.yml
examples/: .env.example  account.py  agent.py  customer.py  get_all_templates.py  get_teamplate_by_id.py  get_templates_by_type.py  group.py  list_customers.py  manage_webhooks.py  message.py  send_message.py  webhook.py
src/zoko/: client.py
src/zoko/constants/: endpoint.py
src/zoko/resources/: account.py  message.py
tests/: test_client_account.py  test_client_agent.py  test_client_customer.py  test_client_group.py  test_client_message.py  test_client_retry.py  test_client_webhook.py
zoko/: __about__.py  __init__.py  client.py  exceptions.py
zoko/constants/: endpoint.py
zoko/resources/: account.py  agent.py  base.py  customer.py  group.py  message.py  webhook.py
zoko/types/: common.py
