[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zoko"
dynamic = ["version"]
description = 'Python SDK for Zoko API'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Rocktim Saikia", email = "rocktimthedev@gmail.com" }]
dependencies = [
	"requests>=2.31",
]
