[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zoko"
version = "0.0.1"
description = 'Python SDK for Zoko API'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE", classifier = "MIT License" }
keywords = ["zoko", "api", "sdk", "python", "library"]
authors = [{ name = "Rocktim Saikia", email = "rocktimthedev@gmail.com" }]
dependencies = ["requests"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]


[project.urls]
homepage = "https://github.com/rocktimsaikia/zoko-python"
repository = "https://github.com/rocktimsaikia/zoko-python"
issues = "https://github.com/rocktimsaikia/zoko-python/issues"
